revert #8442 changes
Signed-off-by: Ludovic Orban <lorban@bitronix.be>